Agregue el geo tracker a la pagina

--- a/languages/es.yml
+++ b/languages/es.yml
@@ -23,6 +23,7 @@ sidebar:
     links: 'Sitios relacionados'
     tags: 'etiquetas'
     tag_cloud: 'Listado de Etiquetas'
+    geovisites: 'Visitantes'
 article:
     comments: 'Comentarios'
     share: 'Compartir'
