--- a/languages/en.yml
+++ b/languages/en.yml
@@ -22,6 +22,7 @@ sidebar:
     links: 'links'
     tags: 'tags'
     tag_cloud: 'tag cloud'
+    geovisites: 'Visitors'
 article:
     comments: 'Comments'
     share: 'Share'
