Agregue el link a las paginas AMP

--- a/languages/es.yml
+++ b/languages/es.yml
@@ -3,7 +3,7 @@ index:
     about: 'Acerca de'
     search: 'Buscar'
     archive: 'Archivo'
-    category: 'Categoria'
+    category: 'Categoría'
     uncategorized: 'Sin categoría'
     tag: 'Etiqueta'
     letters: 'Cartas'
@@ -15,8 +15,8 @@ nav:
 sidebar:
     follow: 'seguir'
     newer: 'más nuevo'
-    older: 'antigüo'
-    recents: 'recientes'
+    older: 'más antigüo'
+    recents: 'Recientes'
     sticky: 'Popular'
     archives: 'archivos'
     categories: 'categorias'
